[gd_scene load_steps=13 format=2]

[ext_resource path="res://Humo.gd" type="Script" id=1]
[ext_resource path="res://Images/mallAdentro.jpeg" type="Texture" id=2]
[ext_resource path="res://Images/sensorHumo.png" type="Texture" id=3]
[ext_resource path="res://Images/antenna.png" type="Texture" id=4]
[ext_resource path="res://Images/sonic2.png" type="Texture" id=5]
[ext_resource path="res://Images/sonic1.png" type="Texture" id=6]
[ext_resource path="res://Images/1.png" type="Texture" id=7]
[ext_resource path="res://Images/2.png" type="Texture" id=8]
[ext_resource path="res://Images/fire.png" type="Texture" id=9]
[ext_resource path="res://Images/cloud.PNG" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Humo" type="Node" index="0"]

script = ExtResource( 1 )

[node name="mallAdentro" type="Sprite" parent="." index="0"]

position = Vector2( 379.157, 253.38 )
scale = Vector2( 0.546476, 0.546476 )
texture = ExtResource( 2 )

[node name="sensorHumo" type="Sprite" parent="." index="1"]

position = Vector2( 591.019, 144.517 )
scale = Vector2( 0.264048, 0.264048 )
texture = ExtResource( 3 )

[node name="antenna" type="Sprite" parent="." index="2"]

position = Vector2( 1131.19, 596.153 )
scale = Vector2( 0.432287, 0.432287 )
texture = ExtResource( 4 )

[node name="HumoSensor" type="AnimatedSprite" parent="." index="3"]

position = Vector2( 872.038, 341.455 )
scale = Vector2( 0.480109, 0.480109 )
frames = SubResource( 3 )
animation = "default"

[node name="luz" type="AnimatedSprite" parent="." index="4"]

position = Vector2( 1131.29, 531.156 )
rotation = -0.0527711
scale = Vector2( 0.650366, 0.650366 )
frames = SubResource( 2 )
animation = "default"

[node name="fire" type="Sprite" parent="luz" index="0"]

position = Vector2( -1142.25, -336.857 )
rotation = 0.0474127
scale = Vector2( 1.65812, 1.25669 )
texture = ExtResource( 9 )

[node name="cloud" type="Sprite" parent="." index="5"]

position = Vector2( 1186.48, 149.284 )
scale = Vector2( 0.31188, 0.31188 )
texture = ExtResource( 10 )

[node name="Button" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1165.0
margin_top = 260.0
margin_right = 1177.0
margin_bottom = 365.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="Button2" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1180.0
margin_top = 345.0
margin_right = 1192.0
margin_bottom = 458.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="celular" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1254.0
margin_top = 686.0
margin_right = 1337.0
margin_bottom = 730.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Celular"
flat = false
align = 1

[node name="atras" type="Button" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_top = 700.0
margin_right = 124.0
margin_bottom = 738.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Atras"
flat = false
align = 1

[connection signal="pressed" from="celular" to="." method="_on_celular_pressed"]

[connection signal="pressed" from="atras" to="." method="_on_atras_pressed"]


